# Geoscience-Data-Quality-for-Machine-Learning

./: .gitignore  DataQuality_Models.csv  DataQuality_Models.xlsx  Geology-Quality-1M.ipynb  Magnetic-Survey-Quality.ipynb  Model-Quality-Map.ipynb  README.md  Radiometric-Survey-Quality.ipynb  Reference Suggestions.md  Untitled.ipynb  pyproject.toml
src/geoscience_data_quality/: __init__.py  point_density.py  quality_model.py  rasterize.py  survey.py  vector.py
tests/: test_point_density.py  test_quality_model.py  test_rasterize.py  test_survey.py  test_vector.py
