[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "geoscience-data-quality"
version = "0.1.0"
description = "Tools for assessing geoscience data quality for machine learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Richard Scott"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "geopandas>=0.12",
    "numpy>=1.22",
    "pandas>=1.4",
    "rasterio>=1.3",
    "shapely>=2.0",
]

[project.optional-dependencies]
excel = [
    "openpyxl>=3.0",
]
gravity = [
    "verde>=1.7",
    "xarray>=2022.3",
    "pooch>=1.6",
]
viz = [
    "matplotlib>=3.5",
]
all = [
    "geoscience-data-quality[excel,gravity,viz]",
]
dev = [
    "geoscience-data-quality[all]",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/RichardScottOZ/Geoscience-Data-Quality-for-Machine-Learning"
Repository = "https://github.com/RichardScottOZ/Geoscience-Data-Quality-for-Machine-Learning"
Issues = "https://github.com/RichardScottOZ/Geoscience-Data-Quality-for-Machine-Learning/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
